# alphamissense-db

./: .gitignore  Cargo.toml  README.md
frontend/src/: App.css  App.js  SearchBar.css  SearchBar.js  Toolbar.js  VariantInput.js
src/: aminoacids.rs  builder.rs  database.rs  main.rs  search.rs  ui.rs  uniprot.rs  variations.rs
src/builder/: database.rs
src/genes/: names.json
