[package]
name = "alphamissense-conde-de-valenciana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.189"
serde_json = "*"
tokio = {version = "1.33.0", features = ["full"]}
simd-json = "0.13.4"
reqwest = {version = "0.11", features = ["blocking"]}
bincode = "1.3.3"
tantivy = "0.21"
egui = "0.23.0"
eframe = "0.23.0"
rocket = "=0.5.0-rc.3"
